--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.tian.project.chabaike.activity.WelcomeActivity"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" /> 	
@@ -25,10 +26,12 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.tian.project.chabaike.activity.MainActivity"/>
-        <activity android:name="com.tian.project.chabaike.activity.GuideActivity"/>
+        <activity android:name="com.tian.project.chabaike.activity.MainActivity" android:launchMode="singleTask"/>
+        <activity android:name="com.tian.project.chabaike.activity.GuideActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar" />
         <activity android:name="com.tian.project.chabaike.activity.ContentActivity"/>
-        <activity android:name="com.tian.project.chabaike.activity.MoreActivity"/>
+        <activity android:name="com.tian.project.chabaike.activity.MoreActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
+        <activity android:name="com.tian.project.chabaike.activity.FavoriteActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
+        <activity android:name="com.tian.project.chabaike.activity.SearchActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
     </application>
 
 </manifest>
