已完成： 1.自动更新 2.版权信息（关于我们） 未完成： 1.查看访问记录 2.意见反馈

--- a/libs/android-support-v4.jar.properties
+++ b/libs/android-support-v4.jar.properties
@@ -1,1 +1,1 @@
-src = C:\\Program Files\\adt-bundle-windows-x86-20131030\\sdk\\extras\\android\\support\\v4\\src
+src = E:\\Program Files\\Android\\android-studio\\sdk\\extras\\android\\support\\v4\\src
