--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tian.project.chabaike"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -32,6 +32,7 @@
         <activity android:name="com.tian.project.chabaike.activity.MoreActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
         <activity android:name="com.tian.project.chabaike.activity.FavoriteActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
         <activity android:name="com.tian.project.chabaike.activity.SearchActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
+        <activity android:name="com.tian.project.chabaike.activity.AboutUsActivity" android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
     </application>
 
 </manifest>
